[package]
name = "telegram_forcast56"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
base32 = "0.4.0"
hmac = "0.12.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.36.0", features = [ "rt-multi-thread" ] }
